added API in customer
