# index.js
@@ -9,6 +9,7 @@ import swaggerUi from "swagger-ui-express";
 import user from "./src/api/user/index.js";
 import home from "./src/api/admin/home/index.js";
 import seller from "./src/api/seller/index.js";
+import customer from "./src/api/customer/index.js"
 
 const app = express();
 
@@ -42,7 +43,8 @@ console.log(`Database connected to url ${connectDb.url}`)
 //routes
 app.use('/user',user);
 app.use('/home',home);
-app.use('/seller',seller)
+app.use('/seller',seller);
+app.use('/customer',customer)
 
 //server
 app.listen(config.PORT, ()=>{
